# marine-city

./: .gitignore  README.md
be/: .env  .gitignore  myproject_uwsgi.ini  pyproject.toml
be/app/: admin.py  apps.py
be/app/static/css/: container_update.css  login_register.css
be/app/templates/app/: manage_container.html
be/conf/: settings.py
django_project/: README.md  db.sqlite3  init.sh  pyproject.toml
django_project/app/: admin.py  form.py  models.py  urls.py  views.py
django_project/app/migrations/: 0001_initial.py  0002_remove_container_img_remove_user_avatar_and_more.py
django_project/app/static/css/: admin_interface.css  admin_interface.html.css  container_delete.css  container_detail.css  container_form.css  container_update.css  content.css  drop_down.css  footer.css  header.css  login_register.css  main.css  manage_container.css
django_project/app/templates/app/: container.html  container_delete.html  container_detail.html  container_form.html  container_update.html  content.html  goods_delete.html  goods_form.html  header.html  home.html  login_register.html  main.html  manage_container.html
django_project/base/: form.py  models.py  urls.py  views.py
django_project/base/migrations/: 0001_initial.py
django_project/base/templates/base/: container_form.html  home.html
django_project/conf/: settings.py  urls.py
django_project/static/css/: main.css
django_project/static/js/: main.js
django_project/templates/: admin_interface.html  footer.html  header.html  main.html  nav_bar.html
docs/: README.md  창의적 공학설계 - 10주차_전시회용_요약_template.hwp  (+1 more)
(+26 files in other folders)
