[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["seonghwan7694 <seonghwan7694@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
